Cycles GPU Compute baking often fails #59286

Closed
opened 2018-12-13 04:45:14 +01:00 by Dan Sinni · 45 comments

System Information

Operating system: Windows 10 Home 64
Graphics card: NVIDIA GeForce GTX 860M

Blender Version

Broken: 2.80 Beta (all)
image.png
Worked: 2.79b

Short description of error

When using CUDA and Cycles GPU Compute to bake textures, it usually fails halfway through the process resulting in half-baked textures with horizontal lines through them, like the one displayed below.

image.png

In each subsequent attempt, the bake fails immediately resulting in errors like below. It won't bake again unless I use CPU or restart Blender, but I can't recall it ever baking fully with GPU Compute even after restarting.

image.png

Exact steps for others to reproduce the error

  1. Select CUDA from Edit > Preferences > System > General > Cycles Compute Device
  2. Check any or all devices
{F5937164}
  1. Use following settings:
{F5937188}
{F5937195}
  1. Bake
**System Information** Operating system: Windows 10 Home 64 Graphics card: NVIDIA GeForce GTX 860M **Blender Version** Broken: 2.80 Beta (all) ![image.png](https://archive.blender.org/developer/F5937069/image.png) Worked: 2.79b **Short description of error** When using `CUDA` and `Cycles` `GPU Compute` to bake textures, it usually fails halfway through the process resulting in half-baked textures with horizontal lines through them, like the one displayed below. ![image.png](https://archive.blender.org/developer/F5937235/image.png) In each subsequent attempt, the bake fails immediately resulting in errors like below. It won't bake again unless I use `CPU` or restart Blender, but I can't recall it ever baking fully with `GPU Compute` even after restarting. ![image.png](https://archive.blender.org/developer/F5937116/image.png) **Exact steps for others to reproduce the error** 1. Select `CUDA` from `Edit > Preferences > System > General > Cycles Compute Device` 2. Check any or all devices ``` {F5937164} ``` 3. Use following settings: ``` {F5937188} {F5937195} ``` 4. Bake
Author

Added subscriber: @DanSinni

Added subscriber: @DanSinni

#62233 was marked as duplicate of this issue

#62233 was marked as duplicate of this issue

#61882 was marked as duplicate of this issue

#61882 was marked as duplicate of this issue

#60630 was marked as duplicate of this issue

#60630 was marked as duplicate of this issue

#61508 was marked as duplicate of this issue

#61508 was marked as duplicate of this issue

#60121 was marked as duplicate of this issue

#60121 was marked as duplicate of this issue

#59238 was marked as duplicate of this issue

#59238 was marked as duplicate of this issue

Added subscriber: @zeauro

Added subscriber: @zeauro

I can't reproduce with 21523b5 under ubuntu 16.04 with a titan black. Can you upload a .blend file with the issue ?

I can't reproduce with 21523b5 under ubuntu 16.04 with a titan black. Can you upload a .blend file with the issue ?
Author

Sure. Try this one. I also packed the resulting texture. If I try to bake it again, it fails and throws an error.

gpu_bake_bug.blend

Sure. Try this one. I also packed the resulting texture. If I try to bake it again, it fails and throws an error. [gpu_bake_bug.blend](https://archive.blender.org/developer/F5968656/gpu_bake_bug.blend)

No error. Correct baking, here.
It reminds to me problems at first attempts of hybrid rendering.

Does it work if you only use Graphic Card as CUDA device ?

No error. Correct baking, here. It reminds to me problems at first attempts of hybrid rendering. Does it work if you only use Graphic Card as CUDA device ?
Author

Just gave that a try. No luck. Actually, it failed immediately.

This appears in the taskbar:

image.png

Just gave that a try. No luck. Actually, it failed immediately. This appears in the taskbar: ![image.png](https://archive.blender.org/developer/F5973596/image.png)

Added subscribers: @JamesOvnik, @alaslipknot

Added subscribers: @JamesOvnik, @alaslipknot

Added subscriber: @ostapblender

Added subscriber: @ostapblender
Brecht Van Lommel self-assigned this 2019-01-03 16:51:21 +01:00

Added subscriber: @remotecrab131

Added subscriber: @remotecrab131

Win 10 Pro, gtx 1080

First bake give me an image like the one OP demonstrated, with scan-line like effect, bad bake.

Second try give me nothing. And my viewport cycle straight out vanishes, give me only the GL layer where I can see the light objects and cameras, selection outline, etc.

It also throws an error: "CUDA error at cuCtxCreate: Illegal address", but then reports "Baking map saved to internal image, save it..."

Win 10 Pro, gtx 1080 First bake give me an image like the one OP demonstrated, with scan-line like effect, bad bake. Second try give me nothing. And my viewport cycle straight out vanishes, give me only the GL layer where I can see the light objects and cameras, selection outline, etc. It also throws an error: "CUDA error at cuCtxCreate: Illegal address", but then reports "Baking map saved to internal image, save it..."

Added subscriber: @dev369

Added subscriber: @dev369

Hell on not sure if this its the same issue but looks similar - baking doesnt work gtx 1070

here is the entire error log

https://pastebin.com/JLepKyff

Hell on not sure if this its the same issue but looks similar - baking doesnt work gtx 1070 here is the entire error log https://pastebin.com/JLepKyff

Added subscriber: @Win7yes

Added subscriber: @Win7yes

Added subscriber: @ixd

Added subscriber: @ixd

Added subscriber: @royvandewater

Added subscriber: @royvandewater

Reproduced on a GTX 1070 in blender-2.80.0-git.445433a6913f-windows64 using the default cube scene and attempting to do a combined bake onto a 1024x1024 image with all default render settings.

https://pastebin.com/DgAp8hxg

Reproduced on a GTX 1070 in blender-2.80.0-git.445433a6913f-windows64 using the default cube scene and attempting to do a combined bake onto a 1024x1024 image with all default render settings. https://pastebin.com/DgAp8hxg

Added subscriber: @John514

Added subscriber: @John514

Added subscriber: @Minimalistiker

Added subscriber: @Minimalistiker

Added subscriber: @Fjury-4

Added subscriber: @Fjury-4

Reproduced this issue in every comitted Blender file, latest blender-2.80.0-git.d3870471edd7-windows64, using my own Shaderstatue for Shader testing. All bakings fail before 10% got actually baked.

Message Bake stored internally please safe and trying to bake again results in the orange CUDA message " CUDA error: illegal adress".

GPU: 1080 GTX latest graphics driver
CPU: i5 4460
Windows 10 latest build{F6590069}

Reproduced this issue in every comitted Blender file, latest blender-2.80.0-git.d3870471edd7-windows64, using my own Shaderstatue for Shader testing. All bakings fail before 10% got actually baked. Message Bake stored internally please safe and trying to bake again results in the orange CUDA message " CUDA error: illegal adress". GPU: 1080 GTX latest graphics driver CPU: i5 4460 Windows 10 latest build{[F6590069](https://archive.blender.org/developer/F6590069/Shader_Mesh5.blend)}

From my research this issue has been present for more then a year now. Its a pretty big issue, id say. So far devss kept complete radio silence on this issue, or i havent been able to find anywhere where it was anything said about it. Could devs say anything about it like, is it getting fixed at all and when? Why has it been neglected for so long, is this that hard to fix? Considering it has been around for such a long time.

From my research this issue has been present for more then a year now. Its a pretty big issue, id say. So far devss kept complete radio silence on this issue, or i havent been able to find anywhere where it was anything said about it. Could devs say anything about it like, is it getting fixed at all and when? Why has it been neglected for so long, is this that hard to fix? Considering it has been around for such a long time.

So far we've not found a way to reproduce this yet, tested on multiple computers with different graphics cards.

It will get fixed, but it's one of 1000 other bugs in the tracker that we are working through.

So far we've not found a way to reproduce this yet, tested on multiple computers with different graphics cards. It will get fixed, but it's one of 1000 other bugs in the tracker that we are working through.

Are there any ways to log those things in blender so u can get further details from users?

Are there any ways to log those things in blender so u can get further details from users?

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche

Added subscribers: @rileybrown704, @WilliamReynish

Added subscribers: @rileybrown704, @WilliamReynish

Added subscriber: @bulbfish

Added subscriber: @bulbfish

Added subscriber: @poyodiaz

Added subscriber: @poyodiaz

hi everyone , this bug has not been fixed right? is there a possibility in a close future? seems to work ok in ubuntu...is the only reason I need to reboot my pc... to bake a texture,(not trying to offend anyone I do really appreciate your hard work guys) thanks for all the great effort ! :)

hi everyone , this bug has not been fixed right? is there a possibility in a close future? seems to work ok in ubuntu...is the only reason I need to reboot my pc... to bake a texture,(not trying to offend anyone I do really appreciate your hard work guys) thanks for all the great effort ! :)

Added subscriber: @JAlcaraz

Added subscriber: @JAlcaraz

Still can't confirm myself, but marking as high priority.

Still can't confirm myself, but marking as high priority.

Added subscribers: @szymi, @brecht, @JacquesLucke

Added subscribers: @szymi, @brecht, @JacquesLucke

I tred it on 0ba143a1d6 - same thing, and it's also impossible to start baking again due to CUDA error, as I said in #60121 and it works only after restart of a Blender
BUT! New thing appeared - it looks different with different tile size. Looks like it can render only top half of each tile

Target resolution: 1024x1024

Tile 64: image.png

Tile 256: image.png

Tile 512: image.png

Tile 1024 and upwards: image.png

CubeBake.blend1

I tred it on 0ba143a1d675 - same thing, and it's also impossible to start baking again due to CUDA error, as I said in #60121 and it works only after restart of a Blender BUT! New thing appeared - it looks different with different tile size. Looks like it can render only top half of each tile Target resolution: 1024x1024 Tile 64: ![image.png](https://archive.blender.org/developer/F6785247/image.png) Tile 256: ![image.png](https://archive.blender.org/developer/F6785263/image.png) Tile 512: ![image.png](https://archive.blender.org/developer/F6785244/image.png) Tile 1024 and upwards: ![image.png](https://archive.blender.org/developer/F6785258/image.png) [CubeBake.blend1](https://archive.blender.org/developer/F6785266/CubeBake.blend1)

Added subscribers: @Ureh, @ZedDB

Added subscribers: @Ureh, @ZedDB

I was able to redo this on a GTX 960 now. The exact cause is not clear to me, but it seems that CUDA 10.1 works correctly. Possibly it's the same compiler bug(s) we've reported to NVIDIA before and that they fixed in 10.0 and 10.1.

I was able to redo this on a GTX 960 now. The exact cause is not clear to me, but it seems that CUDA 10.1 works correctly. Possibly it's the same compiler bug(s) we've reported to NVIDIA before and that they fixed in 10.0 and 10.1.

This issue was referenced by blender/cycles@bbd8cb7582

This issue was referenced by blender/cycles@bbd8cb7582e028c220c690278df6f3e13f606b12

This issue was referenced by 65d95879f7

This issue was referenced by 65d95879f73951861a90efe1c3ac5d1d03530fd6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@brecht A bit too late, but I did some research on this (just about 2 hours before it got fixed lol) trying to compile bake kernel with various CUDA versions (9.1, 10.0, 10.1) and optimizations. Here are the results:

OS: Win 10, GPU: GTX 1070

Legend: OK = bakes well, ERROR = cuda errors while baking

Compiler Assembler Optimization Format MSVC Version Result
NVCC 9.1 - O3 cubin 14.11 OK
NVCC 9.1 - None cubin 14.11 OK
NVCC 9.1 - O3 ptx + JIT 14.11 OK
NVCC 9.1 - None ptx + JIT 14.11 OK
NVCC 10.0 - O3 cubin 14.11 OK
NVCC 10.0 - None cubin 14.11 OK
NVCC 10.0 - O3 ptx + JIT 14.11 OK
NVCC 10.0 - None ptx + JIT 14.11 OK
NVCC 10.0 - O3 cubin 14.16 OK
NVCC 10.0 - None cubin 14.16 OK
NVCC 10.0 - O3 ptx + JIT 14.16 OK
NVCC 10.0 - None ptx + JIT 14.16 OK
NVCC 10.1 - O3 cubin 14.11 OK
NVCC 10.1 - None cubin 14.11 OK
NVCC 10.1 - O3 ptx + JIT 14.11 OK
NVCC 10.1 - None ptx + JIT 14.11 OK
NVCC 10.1 - O3 cubin 14.16 OK
NVCC 10.1 - None cubin 14.16 OK
NVCC 10.1 - O3 ptx + JIT 14.16 OK
NVCC 10.1 - None ptx + JIT 14.16 OK
NVCC 9.1 ptxas 9.1 O3 cubin 14.11 OK
NVCC 9.1 ptxas 9.1 None cubin 14.11 OK
NVCC 9.1 ptxas 10.0 O3 cubin 14.11 OK
NVCC 9.1 ptxas 10.0 None cubin 14.11 OK
NVCC 9.1 ptxas 10.1 O3 cubin 14.11 OK
NVCC 9.1 ptxas 10.1 None cubin 14.11 OK
NVCC 10.0 ptxas 10.0 O3 cubin 14.11 OK
NVCC 10.0 ptxas 10.0 None cubin 14.11 OK
NVCC 10.0 ptxas 10.0 O3 cubin 14.16 OK
NVCC 10.0 ptxas 10.0 None cubin 14.16 OK
NVCC 10.0 ptxas 10.1 O3 cubin 14.11 OK
NVCC 10.0 ptxas 10.1 None cubin 14.11 OK
NVCC 10.1 ptxas 10.1 O3 cubin 14.11 OK
NVCC 10.1 ptxas 10.1 None cubin 14.11 OK
NVCC 10.1 ptxas 10.1 O3 cubin 14.16 OK
NVCC 10.1 ptxas 10.1 None cubin 14.16 OK
NVRTC 9.1 ptxas 9.1 O3 cubin 14.11 ERROR
NVRTC 9.1 ptxas 9.1 None cubin 14.11 OK
NVRTC 9.1 - O3 ptx + JIT 14.11 OK
NVRTC 9.1 ptxas 10.0 O3 cubin 14.11 Weird pixels, but not crashed
NVRTC 9.1 ptxas 10.0 None cubin 14.11 OK
NVRTC 10.0 ptxas 10.0 O3 cubin 14.11 Weird pixels, but not crashed
NVRTC 10.0 ptxas 10.0 None cubin 14.11 OK
NVRTC 10.0 - O3 ptx + JIT 14.11 OK
NVRTC 10.0 - None ptx + JIT 14.11 OK
NVRTC 9.1 ptxas 10.1 O3 cubin 14.11 OK
NVRTC 9.1 ptxas 10.1 None cubin 14.11 OK
NVRTC 10.0 ptxas 10.1 O3 cubin 14.11 OK
NVRTC 10.0 ptxas 10.1 None cubin 14.11 OK
NVRTC 10.1 ptxas 10.1 O3 cubin 14.11 OK
NVRTC 10.1 ptxas 10.1 None cubin 14.11 OK
ptx + JIT means loading ptx assembly into blender (instead of .cubin) and letting nvidia driver compile it. (Requires no change to blender source code as driver can handle ptx as well as cubin)

"Weird dots" image from NVRTC 9.1 & ptxas 10.0:
combined.png

And cycles_cubin_cc (which was used to compile cuda kernels shipped with buildbot) did NVRTC 9.1 & ptxas 9.1 with optimization. So it seems to me that nvrtc 9.1 and ptxas 9.1 and dont play nice together on some gpu's (but nvcc 9.1 & ptxas 9.1 works good). Latest NVIDIA driver jit compiles nvrtc 9.1 ptx kernel just fine.

Running cuda_memcheck blender.exe shows:

========= Invalid __global__ read of size 4
=========     at 0x000bab78 in <>/blender/intern/cycles/kernel/../kernel/kernel_path_state.h:250:kernel_cuda_bake
=========     by thread (10,0,0) in block (14,0,0)
=========     Address 0x3e80000000000022 is misaligned
=========     Device Frame:<>/blender/intern/cycles/kernel/../kernel/kernel_bake.h:121:kernel_cuda_bake (kernel_cuda_bake : 0x2cbd8)
=========     Saved host backtrace up to driver entry point at kernel launch time
=========     Host Frame:C:\WINDOWS\SYSTEM32\nvcuda.dll (cuGetExportTable + 0x1b9c47) [0x1c82c5]
=========     Host Frame:<>\build_windows_Release_x64_vc15_Debug\bin\Debug\blender.exe (ccl::CUDADevice::shader + 0x8a3) [0x29a2c83]
=========     Host Frame:<>\build_windows_Release_x64_vc15_Debug\bin\Debug\blender.exe (ccl::CUDADevice::thread_run + 0x356) [0x29a5796]
...

And after further investigation it shows something like a stack corruption on a random thread is happening in

kernel_bake_evaluate ->
    compute_light_pass (create variable "PathState state;") ->
        kernel_path_indirect (passing "state" by pointer) <corruption here> -> ... -> path_state_ao_bounce (kernel_path_state.h:250) ->
                     "access to pointer to stack allocated (and not shared) var "state", pointer points to garbage"

And all subsequent calls to CUDA api return an error. (cuCtxSynchronize, etc)
It seems to me it's an optimization codegen bug with nvrtc 9.1 (and possible in 10.0).

CUDA 10.1 resolves these issues (and we can use the latest msvc with it!).

Tested on this file (default cube + texture):
bake_bug_2.blend

@brecht A bit too late, but I did some research on this (just about 2 hours before it got fixed lol) trying to compile bake kernel with various CUDA versions (9.1, 10.0, 10.1) and optimizations. Here are the results: OS: Win 10, GPU: GTX 1070 *Legend: OK = bakes well, ERROR = cuda errors while baking* | Compiler | Assembler | Optimization | Format | MSVC Version | Result | |---|---|---|---|---|---| |NVCC 9.1| - | O3 |cubin|14.11|OK| |NVCC 9.1| - | None |cubin|14.11|OK| |NVCC 9.1| - | O3 |ptx + JIT|14.11|OK| |NVCC 9.1| - | None |ptx + JIT|14.11|OK| |NVCC 10.0|-|O3|cubin|14.11|OK| |NVCC 10.0|-|None|cubin|14.11|OK| |NVCC 10.0|-|O3|ptx + JIT|14.11|OK| |NVCC 10.0|-|None|ptx + JIT|14.11|OK| |NVCC 10.0|-|O3|cubin|14.16|OK| |NVCC 10.0|-|None|cubin|14.16|OK| |NVCC 10.0|-|O3|ptx + JIT|14.16|OK| |NVCC 10.0|-|None|ptx + JIT|14.16|OK| |NVCC 10.1|-|O3|cubin|14.11|OK| |NVCC 10.1|-|None|cubin|14.11|OK| |NVCC 10.1|-|O3|ptx + JIT|14.11|OK| |NVCC 10.1|-|None|ptx + JIT|14.11|OK| |NVCC 10.1|-|O3|cubin|14.16|OK| |NVCC 10.1|-|None|cubin|14.16|OK| |NVCC 10.1|-|O3|ptx + JIT|14.16|OK| |NVCC 10.1|-|None|ptx + JIT|14.16|OK| |NVCC 9.1| ptxas 9.1|O3|cubin|14.11|OK| |NVCC 9.1| ptxas 9.1|None|cubin|14.11|OK| |NVCC 9.1| ptxas 10.0|O3|cubin|14.11|OK| |NVCC 9.1| ptxas 10.0|None|cubin|14.11|OK| |NVCC 9.1| ptxas 10.1|O3|cubin|14.11|OK| |NVCC 9.1| ptxas 10.1|None|cubin|14.11|OK| |NVCC 10.0| ptxas 10.0|O3|cubin|14.11|OK| |NVCC 10.0| ptxas 10.0|None|cubin|14.11|OK| |NVCC 10.0| ptxas 10.0|O3|cubin|14.16|OK| |NVCC 10.0| ptxas 10.0|None|cubin|14.16|OK| |NVCC 10.0| ptxas 10.1|O3|cubin|14.11|OK| |NVCC 10.0| ptxas 10.1|None|cubin|14.11|OK| |NVCC 10.1| ptxas 10.1|O3|cubin|14.11|OK| |NVCC 10.1| ptxas 10.1|None|cubin|14.11|OK| |NVCC 10.1| ptxas 10.1|O3|cubin|14.16|OK| |NVCC 10.1| ptxas 10.1|None|cubin|14.16|OK| |NVRTC 9.1| ptxas 9.1|O3|cubin|14.11|**ERROR**| |NVRTC 9.1| ptxas 9.1|None|cubin|14.11|OK| |NVRTC 9.1| -|O3|ptx + JIT|14.11|OK| |NVRTC 9.1| ptxas 10.0|O3|cubin|14.11|**Weird pixels, but not crashed**| |NVRTC 9.1| ptxas 10.0|None|cubin|14.11|OK| |NVRTC 10.0| ptxas 10.0|O3|cubin|14.11|**Weird pixels, but not crashed**| |NVRTC 10.0| ptxas 10.0|None|cubin|14.11|OK| |NVRTC 10.0|-|O3|ptx + JIT|14.11|OK| |NVRTC 10.0|-|None|ptx + JIT|14.11|OK| |NVRTC 9.1| ptxas 10.1|O3|cubin|14.11|OK| |NVRTC 9.1| ptxas 10.1|None|cubin|14.11|OK| |NVRTC 10.0| ptxas 10.1|O3|cubin|14.11|OK| |NVRTC 10.0| ptxas 10.1|None|cubin|14.11|OK| |NVRTC 10.1| ptxas 10.1|O3|cubin|14.11|OK| |NVRTC 10.1| ptxas 10.1|None|cubin|14.11|OK| ***ptx + JIT** means loading ptx assembly into blender (instead of .cubin) and letting nvidia driver compile it. (Requires no change to blender source code as driver can handle ptx as well as cubin)* "Weird dots" image from NVRTC 9.1 & ptxas 10.0: ![combined.png](https://archive.blender.org/developer/F6831122/combined.png) And **cycles_cubin_cc** (which was used to compile cuda kernels shipped with buildbot) did `NVRTC 9.1 & ptxas 9.1 with optimization`. So it seems to me that `nvrtc 9.1` and `ptxas 9.1` and dont play nice together on some gpu's (but `nvcc 9.1 & ptxas 9.1` works good). Latest NVIDIA driver jit compiles `nvrtc 9.1 ptx` kernel just fine. Running `cuda_memcheck blender.exe` shows: ``` ========= Invalid __global__ read of size 4 ========= at 0x000bab78 in <>/blender/intern/cycles/kernel/../kernel/kernel_path_state.h:250:kernel_cuda_bake ========= by thread (10,0,0) in block (14,0,0) ========= Address 0x3e80000000000022 is misaligned ========= Device Frame:<>/blender/intern/cycles/kernel/../kernel/kernel_bake.h:121:kernel_cuda_bake (kernel_cuda_bake : 0x2cbd8) ========= Saved host backtrace up to driver entry point at kernel launch time ========= Host Frame:C:\WINDOWS\SYSTEM32\nvcuda.dll (cuGetExportTable + 0x1b9c47) [0x1c82c5] ========= Host Frame:<>\build_windows_Release_x64_vc15_Debug\bin\Debug\blender.exe (ccl::CUDADevice::shader + 0x8a3) [0x29a2c83] ========= Host Frame:<>\build_windows_Release_x64_vc15_Debug\bin\Debug\blender.exe (ccl::CUDADevice::thread_run + 0x356) [0x29a5796] ... ``` And after further investigation it shows something like a stack corruption on a random thread is happening in ``` kernel_bake_evaluate -> compute_light_pass (create variable "PathState state;") -> kernel_path_indirect (passing "state" by pointer) <corruption here> -> ... -> path_state_ao_bounce (kernel_path_state.h:250) -> "access to pointer to stack allocated (and not shared) var "state", pointer points to garbage" ``` And all subsequent calls to CUDA api return an error. (cuCtxSynchronize, etc) It seems to me it's an optimization codegen bug with nvrtc 9.1 (and possible in 10.0). CUDA 10.1 resolves these issues (and we can use the latest msvc with it!). Tested on this file (default cube + texture): [bake_bug_2.blend](https://archive.blender.org/developer/F6831214/bake_bug_2.blend)

@ixd, interesting tests. There is indeed an optimization codegen bug that we reported and that was fixed in 10.1.

@ixd, interesting tests. There is indeed an optimization codegen bug that we reported and that was fixed in 10.1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
16 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59286
No description provided.